@@ -5,6 +5,6 @@ tw homework
 - 安装python2.7
 - 进入tw_homework目录
 - 在命令行输入python main.py即可运行
-- 在浏览器打开http://127.0.0.1:42118/
-- 已经预置了5种商品，直接在http://127.0.0.1:42118/的输入框中输入json即可
-- 修改折扣地址http://127.0.0.1:42118/setting/，修改后需要点击“确定”按钮生效
+- 在浏览器打开 http://127.0.0.1:42118/
+- 已经预置了5种商品，直接在 http://127.0.0.1:42118/ 的输入框中输入json即可
+- 修改折扣地址 http://127.0.0.1:42118/setting/ ，修改后需要点击“确定”按钮生效
