@@ -1,6 +1,9 @@
 CHANGES
 =======
 
+* [tech][liuwei] readme
+* [tech][liuwei] readme
+* [tech][liuwei] .travis modify
 * [tech][liuwei] add werkzeug
 * [tech][liuwei] refactor; add test cases
 * [tech][liuwei] setting discount
